--- a/index.html
+++ b/index.html
@@ -26,41 +26,41 @@
 			<span class="comments">/**</span><br />
 			<span class="space"/><span class="comments">*THE CODE OF LOVE</span><br />
 			<span class="space"/><span class="comments">*/</span><br />
-			Hey Girl !<br />
-			Do you remember the day we first met?<br />
-			<span class="comments">// The ET-LAB Friday. </span><br />
-			Since that day a spark begun;<br />
-			<span class="comments">// Your face Your Voice Your Words.</span><br />
-			Your everything got imprinted in my heart;<br />
-			As the time went on;<br />
-			The Bond grew stronger and stronger;<br />
-			Journey from Infatuation to Love;<br />
-			We have traveled a long way together;<br />
-			There have been fights ;<br />
+			Asees<br />
+			I'm not great at giving handwritten cards <br />
+			<span class="comments">// I tried my best on the drawings. </span><br />
+			But what I can say is;<br />
+			<span class="comments">// Not a minute goes by that I don't think of your face;</span><br />
+			Your perfectly shaped eyebrows, your hazel eyes, and your cute little nose;<br />
+			Your soft, symmetrical lips that I could drown in;<br />
+			And your soft, silky hair, aromatic hair;<br />
+			I never told you how much I wish I was more like you;<br />
+			Just perfect alltogether;<br />
+			We've fought a lot ;<br />
 			<span class="comments">// And I'm sure there will be more.</span><br />
-			But our Bond will always grow back Stronger;<br />
+			But we're always going to be stronger;<br />
 			<br>
 			<br>
-			All I want to say is:<br />
-			Baby, I will love you forever;<br />
+			All I can really say is:<br />
+			I love you forever, and here's to 2 years;<br />
 			<br>
 			<br>
-			Now If you want to hug me you can touch the heart below<br />
+			Click the heart below for some memories <br />
 			<br>
 			<span id="heartspan">
-			<a href="image.jpg"><i class="fas fa-heart" id="icon"></i></a>
+			<a href="image.pdf"><i class="fas fa-heart" id="icon"></i></a>
 			</span>
 		</div>
 		<div id="loveHeart">
 			<canvas id="garden"></canvas>
 			<div id="words">
 				<div id="messages">
-					वर्षा ऋतु FOREVER
+					Aarav & Asees forever
 					<div id="elapseClock"></div>
 				</div>
 				<div id="loveu">
-					I LOVE YOU SO MUCH<br/>
-					<div class="signature">- RITVIK</div>
+					I love you so much <br/>
+					<div class="signature">- Aarav </div>
 				</div>
 			</div>
 		</div>
