--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <script src="https://kit.fontawesome.com/a14ae32021.js" crossorigin="anonymous"></script>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>This one is for my Varchhu</title>
+<title>This is for my only love, Asees/title>
 
 <style type="text/css">
 @font-face {
@@ -24,7 +24,7 @@
 	<div id="content">
 		<div id="code">
 			<span class="comments">/**</span><br />
-			<span class="space"/><span class="comments">*THE CODE OF LOVE</span><br />
+			<span class="space"/><span class="comments">*SUM BOUT LOVE</span><br />
 			<span class="space"/><span class="comments">*/</span><br />
 			Asees<br />
 			I'm not great at giving handwritten cards <br />
