--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <script src="https://kit.fontawesome.com/a14ae32021.js" crossorigin="anonymous"></script>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>This is for my only love, Asees</title>
+<title>My Only Love, Asees</title>
 
 <style type="text/css">
 @font-face {
@@ -29,20 +29,20 @@
 			Asees<br />
 			I'm not great at giving handwritten cards <br />
 			<span class="comments">// I tried my best on the drawings. </span><br />
-			But what I can say is;<br />
-			<span class="comments">// Not a minute goes by that I don't think of your face;</span><br />
-			Your perfectly shaped eyebrows, your hazel eyes, and your cute little nose;<br />
-			Your soft, symmetrical lips that I could drown in;<br />
-			And your soft, silky hair, aromatic hair;<br />
-			I never told you how much I wish I was more like you;<br />
-			Just perfect alltogether;<br />
-			We've fought a lot ;<br />
+			But what I can say is<br />
+			<span class="comments">// Not a minute goes by that I don't think of your face</span><br />
+			Your perfectly shaped eyebrows, your hazel eyes, and your cute little nose<br />
+			Your soft, symmetrical lips that I could drown in<br />
+			And your soft, silky hair, aromatic hair<br />
+			I never told you how much I wish I was more like you<br />
+			Just perfect alltogether<br />
+			We've fought a lot<br />
 			<span class="comments">// And I'm sure there will be more.</span><br />
-			But we're always going to be stronger;<br />
+			But we're always going to be stronger<br />
 			<br>
 			<br>
 			All I can really say is:<br />
-			I love you forever, and here's to 2 years;<br />
+			I love you forever, and here's to 2 years<br />
 			<br>
 			<br>
 			Click the heart below for some memories <br />
