--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 <script type="text/javascript">
 var offsetX = $("#loveHeart").width() / 2;
 var offsetY = $("#loveHeart").height() / 2 - 55;
-var together = new Date();
+<div id="elapseClock"></div>
 
 
 if (!document.createElement('canvas').getContext) {
