--- a/index.html
+++ b/index.html
@@ -70,7 +70,13 @@
 <script type="text/javascript">
 var offsetX = $("#loveHeart").width() / 2;
 var offsetY = $("#loveHeart").height() / 2 - 55;
-<div id="elapseClock"></div>
+var together = new Date();
+together.setFullYear(2023, 6, 9);
+together.setHours(0);
+together.setMinutes(30);
+together.setSeconds(0);
+together.setMilliseconds(0);
+
 
 
 if (!document.createElement('canvas').getContext) {
